Add:like and visit buttons
