# startup.js
@@ -1,6 +1,7 @@
 const session = require("cookie-session");
 const ejs = require("ejs");
 const authentication = require("./src/middlewares/authentication");
+
 module.exports = function (app, express) {
   app.use(
     session({ secret: process.env.SECRET_KEY || "secret_keys_for_cookies" }),
@@ -21,15 +22,16 @@ module.exports = function (app, express) {
   });
   app.use(require("./src/middlewares/findSearchSortPage"));
 
-  app.use("/api/v1/user", require("./src/routes/api/user.api.route"));
-  app.use("/api/v1/blog", require("./src/routes/api/blogPost.api.route"));
-  // app.use(
-  //   "/api/v1/auth",
-  //   authentication,
-  //   require("./src/routes/api/auth.api.router"),
-  // );
-
+  app.get("/api/v1/test", (req, res) => {
+    res.json({ msg: "test route" });
+  });
+  //API ROUTES
+  app.use("/api/v1/users", require("./src/routes/api/user.api.route"));
+  app.use("/api/v1/posts", require("./src/routes/api/blogPost.api.route"));
+  app.use("/api/v1/", require("./src/routes/api/auth.api.router"));
+  //VIEW ROUTES
   app.use("/posts", require("./src/routes/view/blogPost.view.route"));
   app.use("/auth", require("./src/routes/view/user.view.route"));
+
   app.use(require("./src/middlewares/errorHandler"));
 };
